# playing_with_c

./: README.md  a.out  main.c  prod_cons.c  pyproject.toml  race.c  rep_assign.c
